base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-frontend
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs-frontend
  template:
    metadata:
      labels:
        app: nodejs-frontend
    spec:
      containers:
        - name: nodejs-frontend
          image: 739306822356.dkr.ecr.ap-northeast-2.amazonaws.com/test:55721320cd6705ffa987cf9bd985f4fb10650fea
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
      readinessProbe:
        httpGet:
          path: /health
          port: 3000
        initialDelaySeconds: 60
        periodSeconds: 60
