base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nodejs-frontend
  namespace: app
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: nodejs-frontend
  template:
    metadata:
      labels:
        app: nodejs-frontend
    spec:
      containers:
        - name: nodejs-frontend
          image: 611155787285.dkr.ecr.ap-northeast-2.amazonaws.com/node_cloudladder:e9c4154a98f4497632945f69648e113b42824286
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 300m
              memory: 500Mi
            limits:
              cpu: 400m
              memory: 600Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 3
            successThreshold: 2
            failureThreshold: 3
            periodSeconds: 10
  strategy:
    blueGreen:
      activeService: nodejs-frontend-blue
      previewService: nodejs-frontend-green
      autoPromotionEnabled: true
