base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-frontend
  #  annotations:
  # alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: nodejs-frontend
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
