base/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-frontend-blue
  #  annotations:
  # alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: nodejs-frontend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30083
